--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@untitledui/icons": "^0.0.19",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
