--- a/package.json
+++ b/package.json
@@ -1,28 +1,90 @@
 {
+  
   "name": "team_maker_front",
+  
   "private": true,
+  
   "version": "0.0.0",
+  
+  "author": "Saadat Emilbekova <saadat.universe@gmail.com>",
+  
   "type": "module",
+  
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  
+    
+  "dev": "vite",
+  
+    
+  "build": "vite build",
+  
+    
+  "lint": "eslint .",
+  
+    
+  "preview": "vite preview"
+  
   },
+  
   "dependencies": {
-    "@untitledui/icons": "^0.0.19",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+  
+    
+  "@untitledui/icons": "^0.0.19",
+  
+    
+  "bcryptjs": "^3.0.3",
+  
+    
+  "cors": "^2.8.5",
+  
+    
+  "dotenv": "^17.2.3",
+  
+    
+  "jsonwebtoken": "^9.0.3",
+  
+    
+  "mongodb": "^7.0.0",
+  
+    
+  "mongoose": "^9.0.1",
+  
+    
+  "react": "^19.1.1",
+  
+    
+  "react-dom": "^19.1.1"
+  
   },
+  
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7"
+  
+    
+  "@eslint/js": "^9.36.0",
+  
+    
+  "@types/react": "^19.1.16",
+  
+    
+  "@types/react-dom": "^19.1.9",
+  
+    
+  "@vitejs/plugin-react": "^5.0.4",
+  
+    
+  "eslint": "^9.36.0",
+  
+    
+  "eslint-plugin-react-hooks": "^5.2.0",
+  
+    
+  "eslint-plugin-react-refresh": "^0.4.22",
+  
+    
+  "globals": "^16.4.0",
+  
+    
+  "vite": "^7.1.7"
+  
   }
 }
